[package]
name = "bitcoin-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
argh = "0.1.7"
bitcoincore-rpc = "0.14.0"
lazy_static = "1.4.0"
prometheus = "0.13.0"
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
log = "0.4.14"
